--- a/src/styles/NavStyles.module.css
+++ b/src/styles/NavStyles.module.css
@@ -52,5 +52,6 @@
 @media (max-width: 500px) {
   .nav {
     width: 100%;
+    height: 4rem;
   }
 }
